--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:dataunions/data-union-join-server.git"
+    "url": "git@github.com:dataunions/join-server.git"
   }
 }
